--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -619,6 +619,7 @@
     <Compile Include="Models\Condutores\Lista\FiltroDto.cs" />
     <Compile Include="Models\Condutores\Lista\ListaDto.cs" />
     <Compile Include="Models\Genericas\V1\CodigoNomeDto.cs" />
+    <Compile Include="Models\ImpressoesEtiquetas\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Lista\FiltroDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Lista\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Lista\PermissoesDto.cs" />
