--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -463,6 +463,9 @@
     <Compile Include="Controllers\Transportadores\V1\DeleteTransportadoresController.cs" />
     <Compile Include="Controllers\Transportadores\V1\TransportadoresController.cs" />
     <Compile Include="Controllers\Transportadores\V1\GetTransportadoresController.cs" />
+    <Compile Include="Controllers\Volumes\V1\DeleteVolumesController.cs" />
+    <Compile Include="Controllers\Volumes\V1\GetVolumesController.cs" />
+    <Compile Include="Controllers\Volumes\V1\VolumesController.cs" />
     <Compile Include="Controllers\_Compartilhado\Comum\V1\ComumController.cs" />
     <Compile Include="Controllers\_Compartilhado\Comum\V1\GetComumController.cs" />
     <Compile Include="Global.asax.cs">
@@ -476,6 +479,7 @@
     <Compile Include="Helper\Clientes\TraducaoOrdenacaoListaSugestoesClientes.cs" />
     <Compile Include="Helper\Clientes\Tipos\ConverterCadastroAtualizacaoParaTipo.cs" />
     <Compile Include="Helper\Clientes\Tipos\TraducaoOrdenacaoListaTipos.cs" />
+    <Compile Include="Helper\Pedidos\TraducaoOrdenacaoListaPedidosVolumes.cs" />
     <Compile Include="Helper\Projetos\Ferragens\FabricantesFerragem\ConverterCadastroAtualizacaoParaFabricanteFerragem.cs" />
     <Compile Include="Helper\Projetos\Ferragens\FabricantesFerragem\TraducaoOrdenacaoListaFabricantesFerragem.cs" />
     <Compile Include="Helper\Projetos\MedidasProjeto\ConverterCadastroAtualizacaoParaMedidaProjeto.cs" />
@@ -584,6 +588,7 @@
     <Compile Include="Helper\Respostas\SemConteudo.cs" />
     <Compile Include="Helper\Respostas\CriadoDto.cs" />
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
+    <Compile Include="Helper\Volumes\TraducaoOrdenacaoListaVolumes.cs" />
     <Compile Include="Models\Cfops\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Cfops\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Cfops\V1\Filtro\CfopDto.cs" />
@@ -637,6 +642,12 @@
     <Compile Include="Models\Contabilistas\Lista\DadosContatoDto.cs" />
     <Compile Include="Models\Contabilistas\Lista\FiltroDto.cs" />
     <Compile Include="Models\Contabilistas\Lista\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Configuracoes\ListaVolumesDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ListaVolumes\PedidoExternoDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ListaVolumes\DadosVolumeDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ListaVolumes\FiltroDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ListaVolumes\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ListaVolumes\PermissoesDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CategoriasConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
@@ -1000,6 +1011,9 @@
     <Compile Include="Models\Produtos\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Produtos\V1\Lista\ListaDto.cs" />
     <Compile Include="Models\Produtos\V1\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\Volumes\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Volumes\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Volumes\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Negociacoes\JsonContentNegotiator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -1027,7 +1041,6 @@
     <Folder Include="Models\Produtos\CoresFerragem\Lista\" />
     <Folder Include="Models\Produtos\CoresVidro\CadastroAtualizacao\" />
     <Folder Include="Models\Produtos\CoresVidro\Lista\" />
-    <Folder Include="Models\Sinais\Lista\" />
     <Folder Include="Models\Transportadores\Configuracoes\" />
     <Folder Include="Models\Transportadores\Lista\" />
     <Folder Include="Models\Veiculos\Configuracoes\" />
