#85241 - Correção no monitor da nota fiscal para tratar o retorno do WebService da Khan

--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -493,6 +493,7 @@
     <Content Include="Controls\ctrlProdComposicaoOrcamentoAlterarProcApl.ascx" />
     <Content Include="Controls\ctrlProdComposicaoOrcamento.ascx" />
     <Content Include="Listas\LstCfop.aspx" />
+    <Content Include="Listas\LstIntegradores.aspx" />
     <Content Include="Scripts\jquery\jquery-ajuste.js" />
     <Content Include="Scripts\ResizeObserverPolyfill.js" />
     <Content Include="Vue\Cfops\NaturezasOperacao\Componentes\LstNaturezasOperacao.js" />
@@ -6011,6 +6012,13 @@
     </Compile>
     <Compile Include="Listas\LstInstalacao.aspx.designer.cs">
       <DependentUpon>LstInstalacao.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Listas\LstIntegradores.aspx.cs">
+      <DependentUpon>LstIntegradores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Listas\LstIntegradores.aspx.designer.cs">
+      <DependentUpon>LstIntegradores.aspx</DependentUpon>
     </Compile>
     <Compile Include="Listas\LstInventarioEstoque.aspx.cs">
       <DependentUpon>LstInventarioEstoque.aspx</DependentUpon>
