#1626 Refatoração da API de CFOPs e naturezas de operação, para criar um controller que recebe o 'id' do CFOP de forma obrigatória (no path) para os métodos que ele for obrigatório

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -215,7 +215,9 @@
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\DeleteOrdensCargaComCarregamentoController.cs" />
     <Compile Include="Controllers\Cfops\V1\DeleteCfopsController.cs" />
     <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\DeleteNaturezasOperacaoController.cs" />
+    <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\GetNaturezasOperacaoComCfopController.cs" />
     <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\GetNaturezasOperacaoController.cs" />
+    <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\NaturezasOperacaoComCfopController.cs" />
     <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\NaturezasOperacaoController.cs" />
     <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\PatchNaturezasOperacaoController.cs" />
     <Compile Include="Controllers\Cfops\V1\NaturezasOperacao\PostNaturezasOperacaoController.cs" />
