--- a/Api/Glass.Api.Host/Mef.config
+++ b/Api/Glass.Api.Host/Mef.config
@@ -111,6 +111,13 @@
                 contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.AmbientePedidoEspelho, Glass.Data], Glass.Data" />
       </exports>
     </part>
-    
+
+    <part type="Glass.Projeto.CustomOutputDriverProvider, Glass.Projeto" partCreationPolicy="Shared">
+      <importingConstructor useFirst="false" />
+      <exports>
+        <export contractType="CalcEngine.IOutputDriverProvider, CalcEngine" />
+      </exports>
+    </part>
+
   </parts>
 </mef.configuration>
