--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -631,5 +631,11 @@
       </exports>
     </part>
 
+    <part type="Glass.Projeto.CustomOutputDriverProvider, Glass.Projeto" partCreationPolicy="Shared">
+      <importingConstructor useFirst="false" />
+      <exports>
+        <export contractType="CalcEngine.IOutputDriverProvider, CalcEngine" />
+      </exports>
+    </part>
   </parts>
 </mef.configuration>
