--- a/Glass/packages.config
+++ b/Glass/packages.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
-  <package id="CalcEngine" version="1.9.93" targetFramework="net461" />
-  <package id="CalcEngine.Biesse" version="1.9.93" targetFramework="net461" />
+  <package id="CalcEngine" version="2.1.18324.004-final" targetFramework="net452" />
   <package id="CalcEngine.Drawing" version="1.7.2.232" targetFramework="net461" />
-  <package id="CalcEngine.Dxf" version="1.9.93" targetFramework="net461" />
+  <package id="CalcEngine.Dxf" version="2.1.18324.004-final" targetFramework="net452" />
   <package id="CalcEngine.Dynamics" version="1.0.0" targetFramework="net461" />
-  <package id="CalcEngine.Forvet" version="1.9.93" targetFramework="net461" />
-  <package id="CalcEngine.Optima" version="1.9.93" targetFramework="net461" />
-  <package id="CalcEngine.SGlass" version="1.9.93" targetFramework="net461" />
   <package id="CalcEngine.Text" version="1.7.2.232" targetFramework="net461" />
   <package id="Colosoft.Business" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Caching" version="1.0.0" targetFramework="net461" />
