--- a/Integracao/Glass.Integracao.Khan/app.config
+++ b/Integracao/Glass.Integracao.Khan/app.config
@@ -66,16 +66,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/IndicadoresService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IIndicadoresService"
-        contract="KhanIndicadoresServiceReference.IIndicadoresService"
-        name="BasicHttpBinding_IIndicadoresService" />
-      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/ProdutosService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProdutosService"
-        contract="KhanProdutosServiceReference.IProdutosService" name="BasicHttpBinding_IProdutosService" />
-      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/PedidoService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPedidoService"
-        contract="KhanPedidoServiceReference.IPedidoService" name="BasicHttpBinding_IPedidoService" />
+      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/IndicadoresService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IIndicadoresService" contract="KhanIndicadoresServiceReference.IIndicadoresService" name="BasicHttpBinding_IIndicadoresService" />
+      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/ProdutosService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProdutosService" contract="KhanProdutosServiceReference.IProdutosService" name="BasicHttpBinding_IProdutosService" />
+      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/PedidoService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPedidoService" contract="KhanPedidoServiceReference.IPedidoService" name="BasicHttpBinding_IPedidoService" />
     </client>
   </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
