$85241 -  Correção na rotina de exclusão do pedido com falha no sistema da Khan

--- a/Api/Glass.API.Backend/AppSettings.config
+++ b/Api/Glass.API.Backend/AppSettings.config
@@ -1,10 +1,11 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <appSettings>
   <add key="authorizedUris" value="*" />
   <add key="diretorioSistema" value="../../Glass" />
   <add key="permitirXml" value="false" />
-  <add key="Khan:Integracao" value="False" />
+  <add key="Khan:Integracao" value="True" />
   <add key="Khan:EnderecoBase" value="http://mercado.khan.com.br/appskhan/knIntegrador/" />
   <add key="Khan:Token" value="CF58E1CE-9BCC-4AEF-9BC5-E79203A90B01" />
   <add key="Khan:Empresa" value="E001" />
+  <add key="Khan:ExecutarJobs" value="True"/>
 </appSettings>
