--- a/Glass/GDA.config
+++ b/Glass/GDA.config
@@ -3,7 +3,7 @@
   <DefaultProvider name="WebGlass" />
   <Debug trace="true" />
   <ProvidersConfiguration>
-    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.66;Initial Catalog=vidrosdresch_wednesday;UId=root;Pwd=Glass$ync0;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
+    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=localhost;Initial Catalog=vidrosdresch_wednesday;UId=root;Pwd=1234;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
     <!--<Info name="WebGlass" providerName="MySql" connectionstring="Data Source=localhost;Initial Catalog=vidrotech_thursday;UId=desenv;Pwd=glass$ync09;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />-->
   </ProvidersConfiguration>
   <Providers>
