--- a/Api/Glass.API.Backend/Web.config
+++ b/Api/Glass.API.Backend/Web.config
@@ -101,6 +101,10 @@
         <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.5.7.10213" newVersion="2.5.7.10213" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CalcEngine" publicKeyToken="338adf0247ea9d68" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.18333.4" newVersion="2.1.18333.4" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
