#558 Correções de code review

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -657,6 +657,9 @@
     <Compile Include="Models\Condutores\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Condutores\Lista\FiltroDto.cs" />
     <Compile Include="Models\Condutores\Lista\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\CadastroAtualizacao\DocumentosEDadosPessoaisDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\DocumentosEDadosPessoaisDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\ContatosDto.cs" />
     <Compile Include="Models\Genericas\V1\CodigoNomeDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Lista\FiltroDto.cs" />
@@ -711,6 +714,7 @@
     <Compile Include="Models\ContasBancarias\V1\Lista\DadosBancoDto.cs" />
     <Compile Include="Models\ContasBancarias\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Producao\V1\Setores\CadastroAtualizacao\PosicaoDto.cs" />
+    <Compile Include="Models\Producao\V1\Setores\Filtro\SetorDto.cs" />
     <Compile Include="Models\Producao\V1\TiposPerda\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Producao\V1\TiposPerda\Lista\FiltroDto.cs" />
     <Compile Include="Models\Producao\V1\TiposPerda\Lista\ListaDto.cs" />
@@ -892,11 +896,11 @@
     <Compile Include="Models\Funcionarios\V1\Configuracoes\DetalheDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Detalhe\AcessoDto.cs" />
-    <Compile Include="Models\Funcionarios\V1\Detalhe\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Comuns\ContatosDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Detalhe\DetalheDto.cs" />
-    <Compile Include="Models\Funcionarios\V1\Detalhe\DocumentosEDadosPessoaisDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Comuns\DocumentosEDadosPessoaisDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Detalhe\PermisoesDto.cs" />
-    <Compile Include="Models\Funcionarios\V1\Lista\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Comuns\BaseContatosDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Lista\DocumentosDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Lista\ListaDto.cs" />
