$2151 #87175 - Integração da verificação de bloqueio de cliente com a Khan; - Correção no monitor das notas fiscais na integração com a Khan

--- a/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
+++ b/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
@@ -116,6 +116,7 @@
     <Compile Include="MonitorProdutos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvedorLimiteCredito.cs" />
+    <Compile Include="ProvedorSituacaoCliente.cs" />
     <Compile Include="Seguranca\KhanClientMessageInspector.cs" />
     <Compile Include="Seguranca\KhanEndpointBehavior.cs" />
     <Compile Include="Service References\KhanConsultasServiceReference\Reference.cs">
