--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -542,6 +542,8 @@
     <Compile Include="Global\DAL\TipoEntregaDAO.cs" />
     <Compile Include="Domain\EventoComSessaoArgs.cs" />
     <Compile Include="Financeiro\IProvedorLimiteCredito.cs" />
+    <Compile Include="Global\GerenciadorSituacaoCliente.cs" />
+    <Compile Include="Global\IProvedorSituacaoCliente.cs" />
     <Compile Include="Global\Model\AvaliacaoAtendimento.cs" />
     <Compile Include="Global\Model\DeviceApp.cs" />
     <Compile Include="Global\Model\FlagArqMesaProduto.cs" />
