--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -245,6 +245,10 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\Tipos\DeleteTiposFuncionarioController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\Tipos\GetTiposFuncionarioController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\Tipos\PostTiposFuncionarioController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\Tipos\TiposFuncionarioController.cs" />
     <Compile Include="Controllers\Parcelas\V1\PatchParcelasController.cs" />
     <Compile Include="Controllers\Parcelas\V1\PostParcelasController.cs" />
     <Compile Include="Controllers\ImpressoesEtiquetas\V1\ImpressoesEtiquetasController.cs" />
@@ -509,6 +513,8 @@
     <Compile Include="Helper\Clientes\TraducaoOrdenacaoListaSugestoesClientes.cs" />
     <Compile Include="Helper\Clientes\Tipos\ConverterCadastroAtualizacaoParaTipo.cs" />
     <Compile Include="Helper\Clientes\Tipos\TraducaoOrdenacaoListaTipos.cs" />
+    <Compile Include="Helper\Funcionarios\Tipos\ConverterCadastroAtualizacaoParaTipoFuncionario.cs" />
+    <Compile Include="Helper\Funcionarios\Tipos\TraducaoOrdenacaoListaTiposFuncionario.cs" />
     <Compile Include="Helper\Pedidos\TraducaoOrdenacaoListaPedidosVolumes.cs" />
     <Compile Include="Helper\Parcelas\ConverterCadastroAtualizacaoParaParcelas.cs" />
     <Compile Include="Helper\Carregamentos\TraducaoOrdenacaoListaCarregamentos.cs" />
@@ -671,6 +677,10 @@
     <Compile Include="Models\Funcionarios\V1\CadastroAtualizacao\DocumentosEDadosPessoaisDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Detalhe\DocumentosEDadosPessoaisDto.cs" />
     <Compile Include="Models\Funcionarios\V1\Lista\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Tipos\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Tipos\FiltroDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Tipos\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Tipos\PermissoesDto.cs" />
     <Compile Include="Models\Genericas\V1\CodigoNomeDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\Lista\FiltroDto.cs" />
