--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -7,7 +7,7 @@
   <add key="GravarLogAberturaRelatorio" value="true" />
   <add key="ExportarInfoEtiquetaOptyWay" value="true" />
   <add key="AmbienteTeste" value="true" />
-  <add key="UrlCadProject" value="http://cadproject.webglass.com.br" />
+  <add key="UrlCadProject" value="http://192.168.25.58:8090" />
   <add key="CaminhoSalvarFML" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoFMLGerado\" />
   <add key="CaminhoSalvarDXF" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoDXFGerado\" />
   <!--<add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />-->
