#1644 - Refatoração da listagem de movimentações do estoque fiscal.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -245,8 +245,21 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Estoques\V1\Movimentacoes\Fiscais\DeleteMovimentacoesEstoqueFiscalController.cs" />
+    <Compile Include="Controllers\Estoques\V1\Movimentacoes\Fiscais\GetMovimentacoesEstoqueFiscalController.cs" />
+    <Compile Include="Controllers\Estoques\V1\Movimentacoes\Fiscais\MovimentacoesEstoqueFiscalController.cs" />
+    <Compile Include="Controllers\Estoques\V1\Movimentacoes\Fiscais\PostMovimentacoesEstoqueFiscalController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\TiposMovimentacao\GetTiposMovimentacaoController.cs" />
+    <Compile Include="Helper\Estoques\Movimentacoes\Fiscais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueFiscal.cs" />
+    <Compile Include="Helper\Estoques\Movimentacoes\Fiscais\TraducaoOrdenacaoMovimentacoesEstoqueFiscal.cs" />
     <Compile Include="Helper\Estoques\Movimentacoes\Reais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueReal.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\DadosEstoqueDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\DataCadastroMovimentacaoDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\FiltroDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\ListaDto.cs" />
+    <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\PermissoesDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Reais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\PostMovimentacaoEstoqueRealController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\DeleteMovimentacaoEstoqueRealController.cs" />
