--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -489,6 +489,9 @@
     <Content Include="Vue\Clientes\Sugestoes\Componentes\LstSugestaoCliente.js" />
     <Content Include="Vue\Clientes\Sugestoes\Templates\LstSugestaoCliente.Filtro.html" />
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
+    <Content Include="Vue\Estoques\Movimentacoes\Fiscais\Componentes\ListaMovimentacoesEstoqueFiscal.Filtro.js" />
+    <Content Include="Vue\Estoques\Movimentacoes\Fiscais\Componentes\ListaMovimentacoesEstoqueFiscal.js" />
+    <Content Include="Vue\Estoques\Movimentacoes\Fiscais\Templates\ListaMovimentacoesEstoqueFiscal.Filtro.html" />
     <Content Include="Vue\Estoques\Movimentacoes\Reais\Componentes\ListaMovimentacoesEstoqueReal.Filtro.js" />
     <Content Include="Vue\Estoques\Movimentacoes\Reais\Componentes\ListaMovimentacoesEstoqueReal.js" />
     <Content Include="Vue\Estoques\Movimentacoes\Reais\Templates\ListaMovimentacoesEstoqueReal.Filtro.html" />
